<resources>
    <string name="app_name">Game of Thrones</string>
    <string name="menu_search_title">Search</string>

    <string name="words">Words:</string>
    <string name="born">Born:</string>
    <string name="titles">Titles:</string>
    <string name="aliases">Aliases:</string>
    <string name="father">Father:</string>
    <string name="mother">Mother:</string>
    <string name="network_error">Интернет недоступен - приложение не может быть запущенно. Подключитесь к интернету и перезапустите приложение</string>
</resources>
